ios/Classes/libcover_crypt.h

// NOTE: Autogenerated file

#define MAX_CLEAR_TEXT_SIZE (1 << 30)
#define MAX_CLEAR_TEXT_SIZE (1 << 30)
#define MAX_CLEAR_TEXT_SIZE (1 << 30)
/**
 *
 * # Safety
 */
int h_aes_encrypt_block(char *encrypted_ptr,
                        int *encrypted_len,
                        const char *symmetric_key_ptr,
                        int symmetric_key_len,
                        const char *uid_ptr,
                        int uid_len,
                        int block_number,
                        const char *data_ptr,
                        int data_len);
/**
 *
 * # Safety
 */
int h_aes_decrypt_block(char *clear_text_ptr,
                        int *clear_text_len,
                        const char *symmetric_key_ptr,
                        int symmetric_key_len,
                        const char *uid_ptr,
                        int uid_len,
                        int block_number,
                        const char *encrypted_bytes_ptr,
                        int encrypted_bytes_len);
extern void log(const str *s);
extern void alert(const str *s);