lib/src/cover_crypt/generated_bindings.dart


  late final _h_aes_encrypt_blockPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_aes_encrypt_block');
  late final _h_aes_encrypt_block = _h_aes_encrypt_blockPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Char>,
          int)>();

  /// # Safety
  int h_aes_decrypt_block(
    ffi.Pointer<ffi.Char> clear_text_ptr,
    ffi.Pointer<ffi.Int> clear_text_len,
    ffi.Pointer<ffi.Char> symmetric_key_ptr,
    int symmetric_key_len,
    ffi.Pointer<ffi.Char> uid_ptr,
    int uid_len,
    int block_number,
    ffi.Pointer<ffi.Char> encrypted_bytes_ptr,
    int encrypted_bytes_len,
  ) {
    return _h_aes_decrypt_block(
      clear_text_ptr,
      clear_text_len,
      symmetric_key_ptr,
      symmetric_key_len,
      uid_ptr,
      uid_len,
      block_number,
      encrypted_bytes_ptr,
      encrypted_bytes_len,
    );
  }

  late final _h_aes_decrypt_blockPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Int>,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int,
              ffi.Int,
              ffi.Pointer<ffi.Char>,
              ffi.Int)>>('h_aes_decrypt_block');
  late final _h_aes_decrypt_block = _h_aes_decrypt_blockPtr.asFunction<
      int Function(
          ffi.Pointer<ffi.Char>,
          ffi.Pointer<ffi.Int>,
          ffi.Pointer<ffi.Char>,
          int,
          ffi.Pointer<ffi.Char>,
          int,
          int,
          ffi.Pointer<ffi.Char>,
          int)>();

  void log(
    ffi.Pointer<ffi.Int> s,
  ) {
    return _log(
      s,
    );
  }

  late final _logPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Int>)>>(
          'log');
  late final _log = _logPtr.asFunction<void Function(ffi.Pointer<ffi.Int>)>();

  void alert(
    ffi.Pointer<ffi.Int> s,
  ) {
    return _alert(
      s,
    );
  }

  late final _alertPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Int>)>>(
          'alert');
  late final _alert =
      _alertPtr.asFunction<void Function(ffi.Pointer<ffi.Int>)>();
}

const int MAX_CLEAR_TEXT_SIZE = 1073741824;
